# wl_mpi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main_mpi.cpp  sample.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp  ferro_ising_square.cpp
benchmarks/analysis/: pyproject.toml
benchmarks/analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb
benchmarks/analysis/data_exact/: Lx16Ly16.json  Lx4Ly4.json  Lx8Ly8.json
benchmarks/analysis/data_wl/: 2021-02-28T01:35:43.json
benchmarks/analysis/data_wl/.ipynb_checkpoints/: 2021-02-16T23:37:24-checkpoint.json
exact_results/: CMakeLists.txt  README.md  exact.cpp
include/: ferro_ising.hpp  flags.hpp  histo_env_manager.hpp  is_time_out.hpp  joint.hpp  log_for_json.hpp  mpi.hpp  mpi_setting.hpp  random.hpp  rewl.hpp  stop_callback.hpp  window.hpp  wl_mpi.hpp  wl_params.hpp
model_sample/: ferro_ising.hpp
model_sample/exact_results/: CMakeLists.txt  exact_ferro_ising.cpp
rawdata/: CMakeLists.txt  joint.cpp
rawdata/include/: rewl_data.hpp
src/: CMakeLists.txt  ferro_ising.cpp  histo_env_manager.cpp  mpi_setting.cpp  rewl.cpp  stop_callback.cpp  window.cpp
test/: ferro_ising.cpp  graph.cpp  histo_env_manager.cpp  json.cpp
